lab1/Test/L1-A-7-28.cmm
struct YVMdEUj_TdcXwC4rgp ;
int g7q6yByQ4GD_rgu1IVYN ( struct {
}qzx0k2MsnJGtGFE_9kV ) {
  if ( KIXiv7qh7alwHT7P9qSa ) {
    int EtPXQlKm1VuAZb = gz ;
    while ( r )     if ( WH )     rJL1Q ;
else     T9KvuDIm7WFkU1ZQAeoX ~;


  }else   if ( TZlj9AntG2 )   return jHx6yVh9673QbDjLyo 
    = EFK7f && BDpyf < deJ8kamkbGyNafNySyfw * - ! ! GwXVKioOBCMk 
    [ Q || h1 > ORjJ98u4 - dsZn2SXeiTCxOWhT ( bYj92IiSCRY 
    , hDTpgM = JB9 || FdrnYFq6EUhapH3Nuu == DtdcYgbJqXRkeOBaw6 
    ( BFNIQT1n_SP && T8gB != - yMUr5C5XVFAjw [ qLup5TYF 
    = CsvK6bosjviniq5PwC = rum1 = bnIB4dtxMVzFy >= DjGFJ8 
    ] <= vqf2qJVEXi9ej9YT9X . Huzb3GmnzxlDqMmPgCE + ! 
    ( 363247357.1857484366 ) #/ 2018866319 ) . p1m ) . 
    ponqBKoSOg2cWbu ] + - ! Tl8prYCzRE4g / Og0pj3bGCG5 
    ( ) ;


}
float NHQeZzzcLBzS0hN9FigB [ 374201807 ] , ej6R3vzb 

;
int ;
int xg 
;
int ;
int UzPDCVSsPaYu4q4g 
;
struct {
  struct Y502tA {
    struct QfdDayuzRfWt JmbtiwkLc487rF ;
    int b7PlFrJN ;
    struct k_FcQVXswkdT CF0GNz0r ;
  }Csoecld ;
}JYSVOvd ( ) {
  struct xfbjWy4ZHZq0UcNp eJ6_hFIusu7 , xVdV4cYMHHTi4 
    ;
}
int ^coXbCtdHoZ ( ) {
}
int dhzWN1oC ( int DTB0wqUTA0O , int bzOa7bBrYwp ) 
  {
}
